--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 <html>
 <script src='https://d3js.org/d3.v5.min.js'></script>
-<!-- <script src="https://unpkg.com/d3-array@1"></script>
-<script src="https://unpkg.com/d3-collection@1"></script>
-<script src="https://unpkg.com/d3-path@1"></script>
-<script src="https://unpkg.com/d3-shape@1"></script>
-<script src="https://unpkg.com/d3-sankey@0"></script> -->
 
 <style> 
 	circle {fill: lightblue; stroke: black;} 
@@ -26,14 +21,15 @@
 	.tooltip {	
 	    position: absolute;			
 	    text-align: center;			
-	    width: 60px;					
-	    height: 28px;					
+	    width: 200px;					
 	    padding: 2px;				
 	    font: 12px sans-serif;		
 	    background: lightsteelblue;	
 	    border: 0px;		
 	    border-radius: 8px;			
-	    pointer-events: none;			
+	    pointer-events: none;	
+	    word-wrap: break-word;
+		white-space: pre;		
 	}
 
 	.dot {
@@ -310,11 +306,20 @@ College 4 years or more,39426,44275`
 			      .attr("y", function (d, i) { var newY = height - y(d[1]); return y(d[1]); } )
 			      .attr('height', function (d, i) { return y(d[0]) - y(d[1]); })
 				  .attr('stroke', 'black')
-				  .on("mouseover", function(d) {		
+				  .on("mouseover", function(d) {
+				  	let femaleTotal = parseInt(d.data.Female);
+				  	let maleTotal = parseInt(d.data.Male);
+				  	let overallTotal = femaleTotal + maleTotal;
+				  	let femalePercent = (femaleTotal * 100 / overallTotal).toFixed(2);
+				  	let malePercent = (maleTotal * 100 / overallTotal).toFixed(2);
+				  	let newTooltip = `Total number of females: ${femaleTotal}\n` +
+				  					 `Total number of males: ${maleTotal}\n` + 
+				  					 `Percent of females: ${femalePercent}\n` +
+				  					 `Percent of males: ${malePercent}\n`	
 			            tool.transition()		
 			                .duration(200)		
 			                .style("opacity", .9);		
-			            tool.html(d[1] - d[0])	
+			            tool.html(newTooltip)	
 			                .style("left", (d3.event.pageX) + "px")		
 			                .style("top", (d3.event.pageY - 28) + "px");	
 			            })					
