--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 <html>
 <body class='myBody' onload='init()'>
-	<h1 class="title">Education in the United states (in thousands)</h1>
+	<h1 class="title">Highest Level of Education Achieved in the United States (in thousands)</h1>
 	<div class="graphContainer">
 		<div class="header">
 			<div class="form-container">
@@ -296,17 +296,17 @@ College 4 years or more,39426,44275`
 		} else if (currentYear == 1950) {
 			newDesc = ""
 		} else if (currentYear == 1960) {
-			newDesc = "1963: JFK signs the Equal Pay Act, prohibiting any wage descrimination between men and women for performing the same job."
+			newDesc = "1963: JFK signs the Equal Pay Act, prohibiting any wage discrimination between men and women for performing the same job."
 			newDesc += "\n\n"
-			newDesc += "1964: Lyndon B Johnson signs the Civil Rights Act, banning employment descrimination based on gender, race, religion, or national origin"
+			newDesc += "1964: Lyndon B. Johnson signs the Civil Rights Act, banning employment discrimination based on gender, race, religion, or national origin."
 		} else if (currentYear == 1970) {
-			newDesc = "1972: Title IX is signed regarding Education. It prohibits any descrimination within the education system based on gender."
+			newDesc = "1972: Title IX is signed regarding Education. It prohibits any discrimination within the education system based on gender."
 		} else if (currentYear == 1980) {
-			newDesc = "1981: Sandra Day O’Connor becomes the first women is appointed to the Surpreme Court"
+			newDesc = "1981: Sandra Day O’Connor becomes the first woman appointed to the Surpreme Court"
 		} else if (currentYear == 1990) {
 			newDesc = "1994: Clinton signs the Violence Against Women Act"
 		} else if (currentYear == 2000) {
-			newDesc = "2007: Nancy Pelosi is the first female speaker of the house"
+			newDesc = "2007: Nancy Pelosi is the first female Speaker of the House"
 		}
 		document.getElementById("description").innerHTML = newDesc;
 
